Fixed timeline scrollbar position / overflow

--- a/static/css/interface/_timeline.scss
+++ b/static/css/interface/_timeline.scss
@@ -17,7 +17,11 @@
     }
 
     .layers {
-        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 2.5em;
         overflow-y: scroll;
     }
 
